Changelog for App-Magpie

{{$NEXT}}

1.111730  2011-06-22 16:45:33 Europe/Paris
 - old: update modules.skip

1.111720  2011-06-21 17:17:58 Europe/Paris
 - fixspec: removing default %clean section
 - fixspec: removing default %defattr in %doc
 - dwim: prevent errors when multiple virtual repos
 - magpie: more meaningful package name in script

1.111060  2011-04-16 19:17:53 Europe/Paris

1.111040  2011-04-14 10:01:06 Europe/Paris
 - dwim: do not fail when there is no module to update

1.111030  2011-04-13 10:54:04 Europe/Paris
 - old: update modules.skip

1.111020  2011-04-12 14:23:04 Europe/Paris
 - new command: dwim
 - checkout: using temp chdir to not remove carpet under other commands
 - logger: prepend pid to each log message
 - old: bigger space left for version information columns

1.110840  2011-03-25 10:11:11 Europe/Paris
 - old: adding skip based on package name
 - old: modules.skip updated

1.110720  2011-03-13 10:46:39 Europe/Paris
 - update: allow tabs in %define upstream_version

1.110690  2011-03-10 14:00:51 Europe/Paris
 - skiplist update

1.110680  2011-03-09 12:16:27 Europe/Paris
 - new command: old
 - all commands are now dispatched in their own modules, to be able to
   require them (instead of use-ing them)

1.110590  2011-02-28 15:32:09 Europe/Paris
 - new command: config
 - config: support for --dump
 - config: support for default logging level

1.110570  2011-02-26 15:57:51 Europe/Paris
 - fixspec: insert buildrequires even if no buildarch present
 - fixspec: fetch test_requires from meta.yml as buildrequires

1.110560  2011-02-25 15:57:31 Europe/Paris
 - update: big speedup by using parse::cpan::packages::fast

1.110550  2011-02-24 16:07:55 Europe/Paris
 - update: create helper script before fixing spec file

1.110471  2011-02-16 13:47:06 Europe/Paris
 - remove cruft from tarball

1.110470  2011-02-16 13:32:14 Europe/Paris
 - fixspec: meta.yml requires can be empty

1.110410  2011-02-10 14:33:08 Europe/Paris